@@ -52,6 +52,7 @@ import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
 import java.io.File;
 import java.io.PrintWriter;
+import java.lang.reflect.InvocationTargetException;
 import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -1317,8 +1318,8 @@ public class BufferListener extends VisPlugin
   private void setParser(Class<? extends Parser> bpClass) {
     Parser bp = null;
     try {
-      bp = bpClass.newInstance();
-    } catch (InstantiationException | IllegalAccessException e) {
+      bp = bpClass.getDeclaredConstructor().newInstance();
+    } catch (InvocationTargetException | InstantiationException | IllegalAccessException | NoSuchMethodException e) {
       logger.warn("Could not create buffer parser: " + e.getMessage(), e);
       return;
     }
@@ -1348,7 +1349,7 @@ public class BufferListener extends VisPlugin
         mainPanel.add(new JLabel("Size (1-" + MAX_BUFFER_SIZE + "):"));
         mainPanel.add(textSize);
       }
-      if (size != null) {
+      if (offset != null) {
         textOffset.setText(offset);
         mainPanel.add(new JLabel("Offset"));
         mainPanel.add(textOffset);
@@ -1370,8 +1371,8 @@ public class BufferListener extends VisPlugin
 
   private static Buffer createBufferInstance(Class<? extends Buffer> btClass) {
     try {
-      return btClass.newInstance();
-    } catch (InstantiationException | IllegalAccessException e) {
+      return btClass.getDeclaredConstructor().newInstance();
+    } catch (InvocationTargetException | InstantiationException | IllegalAccessException | NoSuchMethodException e) {
       logger.warn("Could not create buffer type: " + e.getMessage(), e);
       return null;
     }
@@ -1477,7 +1478,7 @@ public class BufferListener extends VisPlugin
           bl,
           mote,
           getPointerAddress(mote),
-          mote.getMemory().getLayout().intSize,
+          mote.getMemory().getLayout().addrSize,
           getSize(mote)
       );
     }
